tests/fixtures/compile-errors/not-called-as-function/compile_error.nim
import strformat,options

import ../../../../src/macro-assertions
ErrorBase.NotCalledAsFunction